# PodcastAvatarsApp

./: .gitignore  .gitmodules  deps_new.txt  pyproject.toml
MuseTalk/: .gitignore  app.py  pyproject.toml
MuseTalk/configs/inference/: realtime - copia.yaml  realtime.yaml
MuseTalk/musetalk/models/: unet.py  vae.py
MuseTalk/musetalk/utils/: preprocessing.py  utils.py
MuseTalk/musetalk/utils/dwpose/: rtmpose-l_8xb32-270e_coco-ubody-wholebody-384x288.py
MuseTalk/musetalk/utils/face_parsing/: __init__.py  model.py
MuseTalk/musetalk/whisper/: audio2feature.py
MuseTalk/scripts/: avatar.py  config.py  exceptions.py  inference_runner.py  realtime_inference.py  utils_ffmpeg.py  utils_io.py
OpusClipApp/: __init__.py  audio_transcriber.py  clip_generator.py  content_analyzer.py  logger_config.py  pyproject.toml  subtitle_generator.py  utils.py  video_processor.py
source/: cloudinary_handler.py  excelhandler.py  google_tts - copia.py  google_tts.py  gpt_langchain.py  image_handler.py  inference.yaml  instagram_api.py  logger_config.py  main.py  muse_talk_wrapper.py  subtitles.py  utils.py  video.py  youtube.py
