[tool.poetry]
name = "musetalk"
version = "0.1.0"
description = "MuseTalk - Talking head generation"
authors = ["TMElyralab"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
diffusers = "0.30.2"
accelerate = "0.28.0"
numpy = "1.26"
tensorflow = "2.20.0"
tensorboard = "2.20.0"
opencv-python = ">=4.10"
soundfile = "0.12.1"
transformers = "4.39.2"
huggingface-hub = "0.30.2"
librosa = "0.11.0"
einops = "0.8.1"
gradio = "5.24.0"

# Otras dependencias
gdown = "*"
requests = "*"
omegaconf = "*"
ffmpeg-python = "*"
moviepy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
