[tool.poetry]
name = "musetalk"
version = "0.1.0"
description = "MuseTalk - Talking head generation"
authors = ["TMElyralab"]

[[tool.poetry.source]]
name = "openmmlab"
url = "https://download.openmmlab.com/mmcv/dist/cu121/torch2.5.1/index.html"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
diffusers = "0.30.2"
accelerate = "0.28.0"
numpy = "1.26"
tensorflow = "2.20.0"
tensorboard = "2.20.0"
opencv-python = ">=4.10"
soundfile = "0.12.1"
transformers = "4.39.2"
huggingface-hub = "0.30.2"
librosa = "0.11.0"
einops = "0.8.1"
gradio = "5.24.0"

# Otras dependencias
gdown = "*"
requests = "*"
omegaconf = "*"
ffmpeg-python = "*"
moviepy = "*"

mmcv = "2.1.0"
# mmcv is installed manually because it requires compilation from source
# pip install --upgrade mmcv==2.1.0 -f https://download.openmmlab.com/mmcv/dist/cu121/torch2.5.1/index.html
mmpose = "1.3.2"
mmengine = "*"
mmdet = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
