[project]
name = "OpusClipApp"
version = "0.1.0"
description = "OpusClipApp package"
authors = [
    {name = "msandovalc",email = "msandovalgm@live.com.mx"}
]
# La siguiente línea es la que causaba el error de despliegue.
# La eliminamos porque no es un paquete, es un servicio web.
# readme = "README.md"

requires-python = ">=3.9, <4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"